GNOME Bugzilla – Bug 662762
critical when HTTP request fails
Last modified: 2011-11-01 22:01:21 UTC
Patch attached to fix a critical and a segfault in with the SoupRequest-based code in grl-net-wc, occuring when the request fails.
Created attachment 200019 [details] [review] grl-net: Fix crashes in SoupRequest error case
Hi, thanks for the patches. We'll review them and push them asap.
Review of attachment 200019 [details] [review]: The changes in functions reply_cb() and grl_net_wc_request_finish() seem OK to me, but the one in get_url_now(), I don't get the reason of it. g_simple_async_result_set_op_res_gpointer() doesn't change the content of the RequestResult. Can you confirm?
You're correct, the change in get_url_now () doesn't have any effect. I've pushed the patch before realising, please accept my apologies if you'd rather I waited
I've pushed this to 0.1.x branch as well. Thanks!
I'm closing this as FIXED: the changes are now available in both the development and stable branches.