grl-net: Fix crashes in SoupRequest error case

https://bugzilla.gnome.org/show_bug.cgi?id=662762

Signed-off-by: Simon Pena <spena@igalia.com>